syntax = "proto3";
package stratos.register.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/api/annotations.proto";

import "cosmos_proto/cosmos.proto";
import "stratos/register/v1/register.proto";
import "cosmos/base/v1beta1/coin.proto";


option go_package = "github.com/stratosnet/stratos-chain/x/register/types";

// Msg defines the register module Msg service.
service Msg {
  // CreateResourceNode defines a method for creating a new resource node.
  rpc HandleMsgCreateResourceNode(MsgCreateResourceNode) returns (MsgCreateResourceNodeResponse) {
    option (google.api.http).post = "/stratos/register/v1/create_resource_node";
  };
  rpc HandleMsgRemoveResourceNode(MsgRemoveResourceNode) returns (MsgRemoveResourceNodeResponse) {
    option (google.api.http).post = "/stratos/register/v1/remove_resource_node";
  };
  rpc HandleMsgUpdateResourceNode(MsgUpdateResourceNode) returns (MsgUpdateResourceNodeResponse) {
    option (google.api.http).post = "/stratos/register/v1/update_resource_node";
  };
  rpc HandleMsgUpdateResourceNodeDeposit(MsgUpdateResourceNodeDeposit) returns (MsgUpdateResourceNodeDepositResponse) {
    option (google.api.http).post = "/stratos/register/v1/update_resource_node_deposit";
  };
  rpc HandleMsgUpdateEffectiveDeposit(MsgUpdateEffectiveDeposit) returns (MsgUpdateEffectiveDepositResponse) {
    option (google.api.http).post = "/stratos/register/v1/update_effective_deposit";
  };

  rpc HandleMsgCreateMetaNode(MsgCreateMetaNode) returns (MsgCreateMetaNodeResponse) {
    option (google.api.http).post = "/stratos/register/v1/create_meta_node";
  };
  rpc HandleMsgRemoveMetaNode(MsgRemoveMetaNode) returns (MsgRemoveMetaNodeResponse) {
    option (google.api.http).post = "/stratos/register/v1/remove_meta_node";
  };
  rpc HandleMsgUpdateMetaNode(MsgUpdateMetaNode) returns (MsgUpdateMetaNodeResponse) {
    option (google.api.http).post = "/stratos/register/v1/update_meta_node";
  };
  rpc HandleMsgUpdateMetaNodeDeposit(MsgUpdateMetaNodeDeposit) returns (MsgUpdateMetaNodeDepositResponse) {
    option (google.api.http).post = "/stratos/register/v1/update_meta_node_deposit";
  };
  rpc HandleMsgMetaNodeRegistrationVote(MsgMetaNodeRegistrationVote) returns (MsgMetaNodeRegistrationVoteResponse) {
    option (google.api.http).post = "/stratos/register/v1/meta_node_registration_vote";
  };
  rpc HandleMsgWithdrawMetaNodeRegistrationDeposit(MsgWithdrawMetaNodeRegistrationDeposit) returns (MsgWithdrawMetaNodeRegistrationDepositResponse) {
    option (google.api.http).post = "/stratos/register/v1/withdraw_meta_node_registration_deposit";
  };

}

// MsgCreateResourceNode encapsulates an MsgCreateResourceNodeTx transaction as an SDK message.
message MsgCreateResourceNode {
  string                        network_address = 1 [
    (gogoproto.jsontag) = "network_address",
    (gogoproto.moretags) = "yaml:\"network_address\""
  ];
  google.protobuf.Any           pubkey = 2 [
    (cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey",
    (gogoproto.jsontag) = "pubkey",
    (gogoproto.moretags) = "yaml:\"pubkey\""
  ];
  cosmos.base.v1beta1.Coin      value = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "value",
    (gogoproto.moretags) = "yaml:\"value\""
  ];
  string                        owner_address = 4 [
    (gogoproto.jsontag) = "owner_address",
    (gogoproto.moretags) = "yaml:\"owner_address\""
  ];
  Description                   description = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "description",
    (gogoproto.moretags) = "yaml:\"description\""
  ];
  uint32                        node_type = 6 [
    (gogoproto.jsontag) = "node_type",
    (gogoproto.moretags) = "yaml:\"node_type\""
  ];
}

// MsgCreateResourceNodeResponse defines the CreateResourceNodeTx response type
message MsgCreateResourceNodeResponse {}

// MsgCreateMetaNode encapsulates an MsgCreateMetaNodeTx transaction as an SDK message.
message MsgCreateMetaNode {
  string                        network_address = 1 [
    (gogoproto.jsontag) = "network_address",
    (gogoproto.moretags) = "yaml:\"network_address\""
  ];
  google.protobuf.Any           pubkey = 2 [
    (cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey",
    (gogoproto.jsontag) = "pubkey",
    (gogoproto.moretags) = "yaml:\"pubkey\""
  ];
  cosmos.base.v1beta1.Coin      value = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "value",
    (gogoproto.moretags) = "yaml:\"value\""
  ];
  string                        owner_address = 4 [
    (gogoproto.jsontag) = "owner_address",
    (gogoproto.moretags) = "yaml:\"owner_address\""
  ];
  Description                   description = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "description",
    (gogoproto.moretags) = "yaml:\"description\""
  ];
}


// MsgCreateMetaNodeResponse defines the CreateMetaNode response type
message MsgCreateMetaNodeResponse {}

// MsgRemoveResourceNode - encapsulates an RemoveResourceNode transaction as an SDK message
message MsgRemoveResourceNode {
  string                   resource_node_address = 1 [
    (gogoproto.jsontag) = "resource_node_address",
    (gogoproto.moretags) = "yaml:\"resource_node_address\""
  ];
  string                   owner_address = 2 [
    (gogoproto.jsontag) = "owner_address",
    (gogoproto.moretags) = "yaml:\"owner_address\""
  ];
}

// MsgRemoveResourceNodeResponse defines the Msg/RemoveResourceNode response type.
message MsgRemoveResourceNodeResponse {}

// MsgRemoveMetaNode - encapsulates an MsgRemoveMetaNode transaction as an SDK message
message MsgRemoveMetaNode {
  string                   meta_node_address = 1 [
    (gogoproto.jsontag) = "meta_node_address",
    (gogoproto.moretags) = "yaml:\"meta_node_address\""
  ];
  string                   owner_address = 2 [
    (gogoproto.jsontag) = "owner_address",
    (gogoproto.moretags) = "yaml:\"owner_address\""
  ];
}

// MsgRemoveMetaNodeResponse defines the Msg/RemoveMetaNode response type.
message MsgRemoveMetaNodeResponse {}


// MsgUpdateResourceNode defines a SDK message for updating an existing resource node.
message MsgUpdateResourceNode {
  Description description       = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "description",
    (gogoproto.moretags) = "yaml:\"description\""
  ];
  string      network_address   = 2 [
    (gogoproto.jsontag) = "network_address",
    (gogoproto.moretags) = "yaml:\"network_address\""
  ];
  string      owner_address = 3 [
    (gogoproto.jsontag) = "owner_address",
    (gogoproto.moretags) = "yaml:\"owner_address\""
  ];
  uint32      node_type = 4 [
    (gogoproto.jsontag) = "node_type",
    (gogoproto.moretags) = "yaml:\"node_type\""
  ];
}

// MsgUpdateResourceNodeResponse defines the Msg/UpdateResourceNode response type.
message MsgUpdateResourceNodeResponse {}


// MsgUpdateMetaNode defines a SDK message for updating an existing meta node.
message MsgUpdateMetaNode {
  Description description       = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "description",
    (gogoproto.moretags) = "yaml:\"description\""
  ];
  string      network_address   = 2 [
    (gogoproto.jsontag) = "network_address",
    (gogoproto.moretags) = "yaml:\"network_address\""
  ];
  string      owner_address = 3 [
    (gogoproto.jsontag) = "owner_address",
    (gogoproto.moretags) = "yaml:\"owner_address\""
  ];
}

// MsgUpdateMetaNodeResponse defines the Msg/UpdateMetaNode response type.
message MsgUpdateMetaNodeResponse {}


// MsgUpdateResourceNodeDeposit defines a SDK message for updating the deposit of an existing resource node.
message MsgUpdateResourceNodeDeposit {
  string                      network_address = 1 [
    (gogoproto.jsontag) = "network_address",
    (gogoproto.moretags) = "yaml:\"network_address\""
  ];
  string                      owner_address = 2 [
    (gogoproto.jsontag) = "owner_address",
    (gogoproto.moretags) = "yaml:\"owner_address\""
  ];
  cosmos.base.v1beta1.Coin    deposit_delta = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "deposit_delta",
    (gogoproto.moretags) = "yaml:\"deposit_delta\""
  ];
}

// MsgUpdateResourceNodeDepositResponse defines the Msg/UpdateResourceNodeDeposit response type.
message MsgUpdateResourceNodeDepositResponse {}

// MsgUpdateEffectiveDeposit defines a SDK message for updating the effective deposit of an existing resource node.
message MsgUpdateEffectiveDeposit {
  option (gogoproto.goproto_getters) = false;

  repeated string           reporters = 1 [
    (gogoproto.jsontag) = "reporters",
    (gogoproto.moretags) = "yaml:\"reporters\""
  ];
  repeated string           reporter_owner = 2 [
    (gogoproto.jsontag) = "reporter_owner",
    (gogoproto.moretags) = "yaml:\"reporter_owner\""
  ];
  string                    network_address = 3 [
    (gogoproto.jsontag) = "network_address",
    (gogoproto.moretags) = "yaml:\"network_address\""
  ];
  string                    effective_tokens = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "effective_tokens",
    (gogoproto.moretags) = "yaml:\"effective_tokens\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
}

// MsgUpdateEffectiveDepositResponse defines the Msg/UpdateEffectiveDeposit response type.
message MsgUpdateEffectiveDepositResponse {}


// MsgUpdateMetaNodeDeposit defines a SDK message for updating the deposit of an existing meta node.
message MsgUpdateMetaNodeDeposit {
  string                      network_address = 1 [
    (gogoproto.jsontag) = "network_address",
    (gogoproto.moretags) = "yaml:\"network_address\""
  ];
  string                      owner_address = 2 [
    (gogoproto.jsontag) = "owner_address",
    (gogoproto.moretags) = "yaml:\"owner_address\""
  ];
  cosmos.base.v1beta1.Coin    deposit_delta = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "deposit_delta",
    (gogoproto.moretags) = "yaml:\"deposit_delta\""
  ];
}

// MsgUpdateMetaNodeDepositResponse defines the Msg/UpdateMetaNodeDeposit response type.
message MsgUpdateMetaNodeDepositResponse {}

// MsgMetaNodeRegistrationVote defines a SDK message for registration vote of an existing meta node.
message MsgMetaNodeRegistrationVote {
  string           candidate_network_address = 1 [
    (gogoproto.jsontag) = "candidate_network_address",
    (gogoproto.moretags) = "yaml:\"candidate_network_address\""
  ]; // node address of meta node
  string           candidate_owner_address = 2 [
    (gogoproto.jsontag) = "candidate_owner_address",
    (gogoproto.moretags) = "yaml:\"candidate_owner_address\""
  ]; // owner address of meta node
  bool             opinion                     = 3 [
    (gogoproto.jsontag) = "opinion",
    (gogoproto.moretags) = "yaml:\"opinion\""
  ];
  string           voter_network_address       = 4 [
    (gogoproto.jsontag) = "voter_network_address",
    (gogoproto.moretags) = "yaml:\"voter_network_address\""
  ]; // address of voter (other existed meta node)
  string           voter_owner_address = 5 [
    (gogoproto.jsontag) = "voter_owner_address",
    (gogoproto.moretags) = "yaml:\"voter_owner_address\""
  ];  // address of owner of the voter (other existed meta node)
}

// MsgMetaNodeRegistrationVoteResponse defines the Msg/MetaNodeRegistrationVote response type.
message MsgMetaNodeRegistrationVoteResponse {}

// MsgWithdrawMetaNodeRegistrationDeposit defines a SDK message for withdrawing registration deposit of meta node.
message MsgWithdrawMetaNodeRegistrationDeposit {
  string           network_address = 1 [
    (gogoproto.jsontag) = "network_address",
    (gogoproto.moretags) = "yaml:\"network_address\""
  ]; // node address of meta node
  string           owner_address = 2 [
    (gogoproto.jsontag) = "owner_address",
    (gogoproto.moretags) = "yaml:\"owner_address\""
  ]; // owner address of meta node
}

// MsgWithdrawMetaNodeRegistrationDepositResponse defines the Msg/WithdrawMetaNodeRegistrationDeposit response type.
message MsgWithdrawMetaNodeRegistrationDepositResponse {}
